--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
     <section class="pre-auth-forms">
       <h3>Sign Up</h3>
       <form id="sign-up">
-        <input type="email" placeholder="your@email.here">
-        <input type="password" placeholder="password">
-        <input type="password" placeholder="confirm password">
+        <input type="email" name="userdata[email]" placeholder="your@email.here">
+        <input type="password" name="userdata[password]" placeholder="password">
+        <input type="password" name="userdata[password_confirmation]" placeholder="confirm password">
         <button class="btn btn-primary">Submit</button>
         <!-- you will have to add name="something[dataexact] to each input later on" -->
       </form>
       <h3>Sign In</h3>
       <form id="sign-in">
-        <input type="email" placeholder="your@email.here">
-        <input type="password" placeholder="password">
+        <input type="email" name="userdata[email]" placeholder="your@email.here">
+        <input type="password" name="userdata[password]" placeholder="password">
         <button class="btn btn-primary">Submit</button>
         <!-- you will have to add name="something[dataexact] to each input later on" -->
       </form>
     </section>
 
-<!-- Post-Auth-Forms: with 'Change Password' and 'Sign Out' for now in muted that will
+    <!-- Post-Auth-Forms: with 'Change Password' and 'Sign Out' will
 take the place of the Sign-up and Sign-in once they are filled in -->
-    <!-- <section class="post-auth-forms">
+    <section class="post-auth-forms">
       <h3>Change Password</h3>
-      <input type="text" placeholder="current password">
-       <input type="text" placeholder="new password">
-       <input type="text" placeholder="repeat new password">
-       <button class="btn btn-primary">Submit</button>
+      <input type="text" name="passwords[old]" placeholder="current password">
+      <input type="text" name="passwords[new]" placeholder="new password">
+      <input type="text" name="passwords[password_confirmation]" placeholder="repeat new password">
+      <button class="btn btn-primary">Submit</button>
 
-    //   you will have to add name="something[dataexact]" to each input later on -->
+      <!-- you will have to add name="something[dataexact]" to each input later on -->
 
-      <!-- <h3>Sign Out</h3>
+      <h3>Sign Out</h3>
       <form id="sign-out">
         <p>Sorry to see you go! Hope you had a great time playing-see you again next time!</p>
         <button class="btn btn-danger">Log out</button>
       </form>
-    </section> -->
+    </section>
   </header>
 
   <main>
@@ -78,10 +78,10 @@ take the place of the Sign-up and Sign-in once they are filled in -->
   </main>
 
   <section>
-      <button>O's Score</button>
-      <button>X's Score</button>
-      <button id="play-again">Play Another Round!</button>
-      <button id="reset">Reset Scoreboard</button>
+    <button>O's Score</button>
+    <button>X's Score</button>
+    <button id="play-again">Play Another Round!</button>
+    <button id="reset">Reset Scoreboard</button>
   </section>
 
   <footer>
