--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
   <!-- HEADER -Title, (maybe)-Instructions, -Sign up, Sign In/Out -->
   <header>
     <h1 id="title">Tic Tac Toe</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div>
+
+    <div id="message"></div>
     <!-- <p> Instruction: A Childhood Classic! (add as finishing touch)-->
     <section class="pre-auth-forms">
       <h3>Sign Up</h3>
@@ -25,7 +41,6 @@
         <input type="password" name="userdata[password]" placeholder="password">
         <input type="password" name="userdata[password_confirmation]" placeholder="confirm password">
         <button class="btn btn-primary">Submit</button>
-        <!-- you will have to add name="something[dataexact] to each input later on" -->
       </form>
       <h3>Sign In</h3>
       <form id="sign-in">
@@ -40,11 +55,12 @@
 take the place of the Sign-up and Sign-in once they are filled in -->
     <section class="post-auth-forms">
       <h3>Change Password</h3>
-      <input type="text" name="passwords[old]" placeholder="current password">
-      <input type="text" name="passwords[new]" placeholder="new password">
-      <input type="text" name="passwords[password_confirmation]" placeholder="repeat new password">
-      <button class="btn btn-primary">Submit</button>
-
+      <form id="change-password">
+        <input type="text" name="passwords[old]" placeholder="current password">
+        <input type="text" name="passwords[new]" placeholder="new password">
+        <input type="text" name="passwords[password_confirmation]" placeholder="repeat new password">
+        <button class="btn btn-primary">Submit</button>
+      </form>
       <!-- you will have to add name="something[dataexact]" to each input later on -->
 
       <h3>Sign Out</h3>
@@ -54,6 +70,13 @@ take the place of the Sign-up and Sign-in once they are filled in -->
       </form>
     </section>
   </header>
+
+
+
+
+
+
+
 
   <main>
     <section>
