Commit for full-functional API Token Authorization
All API Token Authorization forms (sign-up, sign-in, change password
and sign-out) are working.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h3>Sign In</h3>
       <form id="sign-in">
         <input type="email" name="credentials[email]" placeholder="your@email.here">
-        <input type="password" name="credentials[email]" placeholder="password">
+        <input type="password" name="credentials[password]" placeholder="password">
         <button class="btn btn-primary">Submit</button>
       </form>
     </section>
@@ -56,7 +56,19 @@ take the place of the Sign-up and Sign-in once they are filled in -->
     </section>
   </header>
 
-
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
 
   <main>
     <section>
