--- a/index.html
+++ b/index.html
@@ -55,42 +55,47 @@ take the place of the Sign-up and Sign-in once they are filled in -->
       </form>
     </section>
   </header>
-
+<main>
   <div class="container">
     <div class="row">
-      <div class="col-sm">
-        One of three columns
+      <div class="col-sm" id="0">
+        0
       </div>
-      <div class="col-sm">
-        One of three columns
+      <div class="col-sm" id="1">
+        1
       </div>
-      <div class="col-sm">
-        One of three columns
+      <div class="col-sm" id="2">
+        2
       </div>
     </div>
   </div>
-
-  <main>
-    <section>
-      <div class="row-1">
-        <div class="square-0">0</div>
-        <div class="square-1">1</div>
-        <div class="square-2">2</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm" id="3">
+        3
       </div>
-
-      <div class="row-2">
-        <div class="square-3">3</div>
-        <div class="square-4">4</div>
-        <div class="square-5">5</div>
+      <div class="col-sm" id="4">
+        4
       </div>
-
-      <div class="row-3">
-        <div class="square-6">6</div>
-        <div class="square-7">7</div>
-        <div class="square-8">8</div>
+      <div class="col-sm" id="5">
+        5
       </div>
-    </section>
-  </main>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm" id="6">
+        6
+      </div>
+      <div class="col-sm" id="7">
+        7
+      </div>
+      <div class="col-sm" id="8">
+        8
+      </div>
+    </div>
+  </div>
+</main>
 
   <section>
     <button>O's Score</button>
