Added X and O images
added the x and o images to CSS

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <!-- GAME API -->
 <h1>SCOREBOARD</h1>
 <section>
+  <div class="div-x">X's</div>
+  <div class="div-o">O's</div>
   <button id="index" class='btn btn-primary'>Get All GAMES</button>
 
 <!-- Fix language in the forms ids and placeholders -->
