Commit add click handler for game board box
Successful click handler for when game board is clicked.

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <!-- GAME API -->
 <h1>SCOREBOARD</h1>
 <section>
-  <div class="div-x">X's</div>
-  <div class="div-o">O's</div>
+  <div id="div-x">X</div>
+  <div id="div-o">O</div>
   <button id="index" class='btn btn-primary'>Get All GAMES</button>
 
 <!-- Fix language in the forms ids and placeholders -->
@@ -117,12 +117,12 @@ take the place of the Sign-up and Sign-in once they are filled in -->
       <button class="btn btn-primary"> Get A Game</button>
     </form>
 
-    <h2>Delete A Game</h2>
+    <!-- <h2>Delete A Game</h2>
     <form id="delete-game">
       <label for="delete-game-id"> Enter an ID </label>
       <input name="game[id]" id="delete-game-id" type="number" placeholder="ID">
       <button class="btn btn-primary"> Delete A Game</button>
-    </form>
+    </form> -->
 
     <h2>Update A Game</h2>
     <form id="update-game">
