Commit for additional Game Engine
Added a function in Game UI framework that does not allow player to add
x or o in invalid spot AND also keeps track of current player.
Added an empty game board array in JS.
Added function for Check Board for Winner, but not yet functional.
s

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 
       <h3>Sign Out</h3>
       <form id="sign-out">
-        <p>Sorry to see you go! Hope you had a great time playing-see you again next time!</p>
+        <p>Hope you had a great time playing-see you again next time!</p>
         <button class="btn btn-danger">Log out</button>
       </form>
     </section>
@@ -62,41 +62,23 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <main>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="0">
-        0
-      </div>
-      <div class="col-sm" id="1">
-        1
-      </div>
-      <div class="col-sm" id="2">
-        2
-      </div>
+      <div class="col-sm" id="0">0</div>
+      <div class="col-sm" id="1">1</div>
+      <div class="col-sm" id="2">2</div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="3">
-        3
-      </div>
-      <div class="col-sm" id="4">
-        4
-      </div>
-      <div class="col-sm" id="5">
-        5
-      </div>
+      <div class="col-sm" id="3">3</div>
+      <div class="col-sm" id="4">4</div>
+      <div class="col-sm" id="5">5</div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="6">
-        6
-      </div>
-      <div class="col-sm" id="7">
-        7
-      </div>
-      <div class="col-sm" id="8">
-        8
-      </div>
+      <div class="col-sm" id="6">6</div>
+      <div class="col-sm" id="7">7</div>
+      <div class="col-sm" id="8">8</div>
     </div>
   </div>
 </main>
