--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <!-- GAME API -->
 <h1>SCOREBOARD</h1>
 <section>
-  <div id="div-x">X</div>
-  <div id="div-o">O</div>
+  <button class='btn btn-primary' id="btn-x">X</button>
+  <button class='btn btn-primary' id="btn-o">O</button>
   <button id="index" class='btn btn-primary'>Get All GAMES</button>
 
 <!-- Fix language in the forms ids and placeholders -->
