--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <main>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="0">0</div>
-      <div class="col-sm" id="1">1</div>
-      <div class="col-sm" id="2">2</div>
+      <div class="col-sm" id="0"></div>
+      <div class="col-sm" id="1"></div>
+      <div class="col-sm" id="2"></div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="3">3</div>
-      <div class="col-sm" id="4">4</div>
-      <div class="col-sm" id="5">5</div>
+      <div class="col-sm" id="3"></div>
+      <div class="col-sm" id="4"></div>
+      <div class="col-sm" id="5"></div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-sm" id="6">6</div>
-      <div class="col-sm" id="7">7</div>
-      <div class="col-sm" id="8">8</div>
+      <div class="col-sm" id="6"></div>
+      <div class="col-sm" id="7"></div>
+      <div class="col-sm" id="8"></div>
     </div>
   </div>
 </main>
