Commit w/ new HTML Board, CSS style, and messages
new HTML board with better semantic elements
new CSS styling to board for visual appeal
Game UI messages for player turns addeds

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 
 <!-- TIC TAC TOE BOARD HTML -->
 <main>
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-sm" id="0"></div>
       <div class="col-sm" id="1"></div>
@@ -80,7 +80,28 @@ take the place of the Sign-up and Sign-in once they are filled in -->
       <div class="col-sm" id="7"></div>
       <div class="col-sm" id="8"></div>
     </div>
-  </div>
+  </div> -->
+  <h3 id="winner-announcement">Game starts! Player <strong>X</strong>, make a move!</h3>
+
+  <table>
+		<tbody>
+			<tr>
+				<td class="cells" id="0"></td>
+				<td class="cells" id="1"></td>
+				<td class="cells" id="2"></td>
+			</tr>
+			<tr>
+				<td class="cells" id="3"></td>
+				<td class="cells" id="4"></td>
+				<td class="cells" id="5"></td>
+			</tr>
+			<tr>
+				<td class="cells" id="6"></td>
+				<td class="cells" id="7"></td>
+				<td class="cells" id="8"></td>
+			</tr>
+		</tbody>
+	</table>
 </main>
 
 <!-- GAME API -->
