--- a/index.html
+++ b/index.html
@@ -111,45 +111,32 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 
 
 <!-- GAME API -->
-<!-- <div class="post-auth-forms">
-<section> -->
-  <!-- Play the Game /UPDATE -->
+<div class="post-auth-forms">
+  <div id="results"></div>
+  <section>
+<!-- Start New Game Form / CREATE -->
+    <h2>Create/Play the Game</h2>
+      <form id="create-game">
+        <button for="create-game-id" class="btn btn-primary"> Create/Start A Game</button>
+      </form>
 
-  <!-- <h2>Play a Game</h2>
-  <form id="update-game">
-    <label for="update-game-id"></label>
-    <button class="btn btn-primary"> Play a Game</button>
-  </form> -->
+<!-- Play the Game /UPDATE -->
+    <h2>Update/Play a Game</h2>
+      <form id="update-game">
+        <label for="update-game-id"> Update Game </label>
+        <button class="btn btn-primary"> Update/Play a Game</button>
+      </form>
 
-  <!-- Start New Game Form / CREATE -->
-  <!-- <form id="create-game">
-    <button for="create-game-id" class="btn btn-primary"> Start A Game</button>
-  </form> -->
+ <!-- Get Games Form / INDEX -->
+   <h2>Get Games/Index</h2>
+      <button id="index" class='btn btn-primary'>Get Games/Index</button>
+      <input for="index">
 
-  <!-- Get Games Form / INDEX-->
-    <!-- <button id="index" class='btn btn-primary'>Get All Games</button>
-    <!-- <input for="index"> -->
-
-
-    <!-- <h2>Get Games</h2>
-    <form id="get-game">
-      <label for="game-id"> </label>
-      <button class="btn btn-primary"> Get A Game</button>
-    </form> -->
-
-    <!-- <h2>Delete A Game</h2>
-    <form id="delete-game">
-      <label for="delete-game-id"> Enter an ID </label>
-      <input name="game[id]" id="delete-game-id" type="number" placeholder="ID">
-      <button class="btn btn-primary"> Delete A Game</button>
-    </form> -->
-
-<!-- </section>
-<section id="results"></section> -->
-<!-- </div> -->
+  </section>
+</div>
 
   <footer style="text-align: center; margin-top: 50px;">
-    <p> &copy; Janina Emilia | 2019 | Tic Tac Toe </p>
+    <p> &copy; Janina Emilia Cupp | 2019 | Tic Tac Toe </p>
   </footer>
 
 </body>
