Commit for app.js update and index.HTML
1. Deleted scoreboard handler on app.js because added it to game-move
2. Updated buttons on index.html

--- a/index.html
+++ b/index.html
@@ -123,14 +123,12 @@ take the place of the Sign-up and Sign-in once they are filled in -->
 <!-- Play the Game /UPDATE -->
     <h2>Update/Play a Game</h2>
       <form id="update-game">
-        <label for="update-game-id"> Update Game </label>
         <button class="btn btn-primary"> Update/Play a Game</button>
       </form>
 
  <!-- Get Games Form / INDEX -->
    <h2>Get Games/Index</h2>
-      <button id="index" class='btn btn-primary'>Get Games/Index</button>
-      <input for="index">
+      <button id="index" class='btn btn-primary'>Get Games/Index/Total Games</button>
 
   </section>
 </div>
